@@ -75,6 +75,7 @@ Version 1.9.9+svn:
    * Add --language/-L commandline option to set the language for that session
    * The credits screen no longer mangles image path function in background
      image lists
+   * Evaluate key length even if intervening WML children don't exist (bug #18701)
 
 Version 1.9.9:
  * AI:
